# butterbase

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SETUP.md  SKILL.md  SUBDOMAIN_IMPLEMENTATION.md  cleanup-cf-stress.ts  docker-compose.local.yml  glama.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  realtime-e2e.mjs  stress_test.py  vitest.e2e.config.ts
services/agent-runtime/: CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
services/agent-runtime/src/agent_runtime/: __init__.py  app.py  cancel.py  checkpoint.py  compiler.py  config.py  control_api_client.py  crypto.py  db.py  events.py  heartbeat.py  openrouter.py  recovery.py  redis_client.py  runner.py  safe_request.py  spec.py  templates.py  webhooks.py
services/agent-runtime/tests/: conftest.py  test_cancel.py  test_checkpoint.py  test_compiler.py  test_compiler_durability.py  test_compiler_tools.py  test_control_api_client.py  test_crypto.py  test_e2e_smoke.py  test_events.py  test_health.py  test_heartbeat.py  test_hitl.py  test_openrouter.py  test_recovery.py  test_redis_client.py  test_routes_lifecycle.py  test_routes_runs.py  test_runner.py  test_runner_lifecycle.py  test_safe_request.py  test_spec.py  test_templates.py  test_tools_acl.py  test_tools_audit.py  test_tools_base.py  test_tools_builtin.py  test_tools_functions.py  test_tools_mcp.py  test_webhooks.py
services/agent-runtime/tests/live/: e2e_run.py  e2e_tools.py  (+4 more)
(+1197 files in other folders)
