[project]
name = "agent-runtime"
version = "0.1.0"
description = "Butterbase agentic AI runtime"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "asyncpg==0.30.0",
    "pydantic==2.10.3",
    "httpx==0.28.1",
    "redis>=5.0,<6.0",
    "structlog==24.4.0",
    "dnspython>=2.6",
    "mcp>=1.10,<2.0",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
